repaired the video overlapping title in moviemodal

--- a/src/style/Modal.css
+++ b/src/style/Modal.css
@@ -42,6 +42,15 @@
   flex-flow: row wrap;
 }
 
+.modal-card-item-video {
+  /* flex-grow for the first item in justify content to be form the beggining to the start of hte other elements in the flexbox */
+  /*  https://stackoverflow.com/questions/23621650/how-to-justify-a-single-flexbox-item-override-justify-content */
+  flex-grow: 10;
+  flex-basis: 100%;
+  width: 100%;
+  padding-bottom: 2%;
+}
+
 .modal-card-item p {
   opacity: 0.7;
 }
@@ -69,11 +78,11 @@
 /* the iframe that shows when the user plays the trailer inside the modal */
 /*place in on top of the movie details card - instead of the play button and make it as wide as the card */
 .modal-card-item iframe {
-  position: absolute;
+  /*position: absolute;*/
   top: 0;
   left: 0;
   width: 100%;
-  height: 60%;
+  /*height: 60%;*/
 }
 
 /* genre badge in modal>card>under movie title 
@@ -109,7 +118,7 @@ make it a small white text with nice border */
 }
 
 /* mobile modal-card */
-@media (max-width: 530px) {
+@media (max-width: 500px) {
   /* descrese the size of description on the grounds that it took half of the space on card */
   .modal-card-item p {
     font-size: 0.9rem;
@@ -134,6 +143,11 @@ make it a small white text with nice border */
     font-size: 1.5rem;
     flex-basis: 95%;
     text-align: left;
+  }
+
+  #description {
+    height: 150px;
+    overflow-y: scroll;
   }
 }
 
